--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TLY2PM13Z5"></script> 
     <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-TLY2PM13Z5'); </script>
 
-    <title>VDA Architects</title>
+    <title>VAD Architects</title>
   </head>
   <body>
     <div id="root"></div>
