--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TLY2PM13Z5"></script> 
     <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-TLY2PM13Z5'); </script>
 
+    <!-- remove when up on live -->
+    <meta name="robots" content="noindex, nofollow" />
+
     <title>VAD Architects</title>
   </head>
   <body>
